--- a/config.gradle
+++ b/config.gradle
@@ -11,14 +11,14 @@ ext {
 
     version = [
             androidSupportSdkVersion: "28.0.0",
-            retrofitSdkVersion      : "2.4.0",
-            dagger2SdkVersion       : "2.15",
-            glideSdkVersion         : "4.6.1",
-            butterknifeSdkVersion   : "10.1.0",
-            rxlifecycleSdkVersion   : "1.0",
-            rxlifecycle2SdkVersion  : "2.2.1",
+            retrofitSdkVersion      : "2.5.0",
+            rxjava2SdkVersion       : "2.2.7",
+            dagger2SdkVersion       : "2.19",
+            glideSdkVersion         : "4.9.0",
+            butterknifeSdkVersion   : "8.8.1",
+            rxlifecycle3SdkVersion   : "3.0.0",
             espressoSdkVersion      : "3.0.2",
-            canarySdkVersion        : "1.5.4"
+            canarySdkVersion        : "1.6.3"
     ]
 
     dependencies = [
@@ -35,27 +35,27 @@ ext {
             "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
             "retrofit-adapter-rxjava"  : "com.squareup.retrofit2:adapter-rxjava:${version["retrofitSdkVersion"]}",
             "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
-            "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.10.0",
+            "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.13.1",
             "okhttp-urlconnection"     : "com.squareup.okhttp:okhttp-urlconnection:2.0.0",
             "glide"                    : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
             "glide-compiler"           : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
             "glide-loader-okhttp3"     : "com.github.bumptech.glide:okhttp3-integration:${version["glideSdkVersion"]}",
-            "picasso"                  : "com.squareup.picasso:picasso:2.5.2",
+            "picasso"                  : "com.squareup.picasso:picasso:2.71828",
 
             //view
             "autolayout"               : "com.zhy:autolayout:1.4.5",
             "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
             "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
-            "pickerview"               : "com.contrarywind:Android-PickerView:3.2.5",
-            "photoview"                : "com.github.chrisbanes.photoview:library:1.2.3",
-            "numberprogressbar"        : "com.daimajia.numberprogressbar:library:1.2@aar",
+            "pickerview"               : "com.contrarywind:Android-PickerView:4.1.7",
+            "photoview"                : "com.github.chrisbanes:PhotoView:2.3.0",
+            "numberprogressbar"        : "com.daimajia.numberprogressbar:library:1.4@aar",
             "nineoldandroids"          : "com.nineoldandroids:library:2.4.0",
             "paginate"                 : "com.github.markomilos:paginate:0.5.1",
-            "vlayout"                  : "com.alibaba.android:vlayout:1.1.0@aar",
-            "lottie"                   : "com.airbnb.android:lottie:2.5.4",
-            "smartRefreshLayout"       : "com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14",
-            "smartRefreshHeader"       : "com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14",
-            "fresco"                   : "com.facebook.fresco:fresco:1.10.0",
+            "vlayout"                  : "com.alibaba.android:vlayout:1.2.8@aar",
+            "lottie"                   : "com.airbnb.android:lottie:2.7.0",
+            "smartRefreshLayout"       : "com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-20",
+            "smartRefreshHeader"       : "com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-20",
+            "fresco"                   : "com.facebook.fresco:fresco:1.12.1",
 
             //rx1
             "rxandroid"                : "io.reactivex:rxandroid:1.2.1",
@@ -65,17 +65,17 @@ ext {
             "rxcache"                  : "com.github.VictorAlbertos.RxCache:runtime:1.7.0-1.x",
             "rxcache-jolyglot-gson"    : "com.github.VictorAlbertos.Jolyglot:gson:0.0.3",
             "rxbinding-recyclerview-v7": "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.1",
-            "rxpermissions"            : "com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar",
+            "rxpermissions"            : "com.github.tbruyelle:rxpermissions:0.10.2",
             "rxerrorhandler"           : "me.jessyan:rxerrorhandler:1.0.1",
 
             //rx2
-            "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.0.2",
-            "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.1.12",
-            "rxlifecycle2"             : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle2-android"     : "com.trello.rxlifecycle2:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle2-components"  : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
+            "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
+            "rxjava2"                  : "io.reactivex.rxjava2:rxjava:${version["rxjava2SdkVersion"]}",
+            "rxlifecycle2"             : "com.trello.rxlifecycle3:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-android"     : "com.trello.rxlifecycle3:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-components"  : "com.trello.rxlifecycle3:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
             "rxcache2"                 : "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x",
-            "rxpermissions2"           : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar",
+            "rxpermissions2"           : "com.github.tbruyelle:rxpermissions:0.10.2",
             "rxerrorhandler2"          : "me.jessyan:rxerrorhandler:2.1.1",
 
             //tools
@@ -86,11 +86,11 @@ ext {
             "dagger2-android-processor": "com.google.dagger:dagger-android-processor:${version["dagger2SdkVersion"]}",
             "androideventbus"          : "org.simple:androideventbus:1.0.5.1",
             "otto"                     : "com.squareup:otto:1.3.8",
-            "gson"                     : "com.google.code.gson:gson:2.8.2",
+            "gson"                     : "com.google.code.gson:gson:2.8.5",
             "multidex"                 : "com.android.support:multidex:1.0.3",
             "javax.annotation"         : "javax.annotation:jsr250-api:1.0",
-            "arouter"                  : "com.alibaba:arouter-api:1.4.0",
-            "arouter-compiler"         : "com.alibaba:arouter-compiler:1.2.0",
+            "arouter"                  : "com.alibaba:arouter-api:1.4.1",
+            "arouter-compiler"         : "com.alibaba:arouter-compiler:1.2.2",
             "progressmanager"          : "me.jessyan:progressmanager:1.5.0",
             "retrofit-url-manager"     : "me.jessyan:retrofit-url-manager:1.4.0",
             "lifecyclemodel"           : "me.jessyan:lifecyclemodel:1.0.1",
@@ -103,7 +103,7 @@ ext {
             "espresso-contrib"         : "com.android.support.test.espresso:espresso-contrib:${version["espressoSdkVersion"]}",
             "espresso-intents"         : "com.android.support.test.espresso:espresso-intents:${version["espressoSdkVersion"]}",
             "mockito-core"             : "org.mockito:mockito-core:1.+",
-            "timber"                   : "com.jakewharton.timber:timber:4.7.0",
+            "timber"                   : "com.jakewharton.timber:timber:4.7.1",
             "logger"                   : "com.orhanobut:logger:2.2.0",
             "canary-debug"             : "com.squareup.leakcanary:leakcanary-android:${version["canarySdkVersion"]}",
             "canary-release"           : "com.squareup.leakcanary:leakcanary-android-no-op:${version["canarySdkVersion"]}",
