--- a/module-zhihu/src/main/debug/AndroidManifest.xml
+++ b/module-zhihu/src/main/debug/AndroidManifest.xml
@@ -48,7 +48,7 @@
         信息, 这样即可重用代码, 又可以允许每个组件可自行管理自己独有的配置信息, 如果业务组件没有独有的配置信息则只需要
         声明 CommonSDK 的 ConfigModule -->
         <meta-data
-            android:name="com.joker.commonsdk.core.GlobalConfiguration"
+            android:name="com.example.commonsdk.core.GlobalConfiguration"
             android:value="ConfigModule"/>
         <meta-data
             android:name="me.jessyan.armscomponent.zhihu.app.GlobalConfiguration"
