--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.joker.mvparmstemplatez"
+        applicationId "com.example.guet.sharehotel"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
