--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
                 android:name=".mvp.view.activity.HomeActivity"
                 android:configChanges="orientation|screenSize"
                 android:screenOrientation="portrait"
+                android:launchMode="singleTask"
                 android:theme="@style/HomeTheme"/>
         <!--
  autolayout meta
