--- a/module_home/src/main/release/AndroidManifest.xml
+++ b/module_home/src/main/release/AndroidManifest.xml
@@ -3,10 +3,21 @@
           package="com.joker.module_home">
 
     <application>
-
-        <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
+        <activity android:name=".mvp.view.activity.OrderDetailActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.MapActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.CommentActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.FilterHotelActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.HotelSelectedInfoActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.FindActivity">
+        </activity> <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
         <meta-data
                 android:name="com.joker.module_home.app.GlobalConfiguration"
                 android:value="ConfigModule"/>
     </application>
+
 </manifest>
