--- a/module_order/src/main/release/AndroidManifest.xml
+++ b/module_order/src/main/release/AndroidManifest.xml
@@ -2,11 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.joker.module_order">
 
-    <application>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
-        <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
+    <application>
+        <activity android:name=".mvp.view.activity.MoreOperationActivity"
+                android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity android:name=".mvp.view.activity.FaceVerificationActivity">
+        </activity> <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
         <meta-data
                 android:name="com.joker.module_order.app.GlobalConfiguration"
                 android:value="ConfigModule"/>
     </application>
+
 </manifest>
