--- a/module_personal/src/main/release/AndroidManifest.xml
+++ b/module_personal/src/main/release/AndroidManifest.xml
@@ -3,9 +3,28 @@
           package="com.joker.module_personal">
 
     <application>
-        <activity android:name=".mvp.view.activity.FaceRegisterActivity">
+        <activity android:name=".mvp.view.activity.ConfirmOrderActivity">
         </activity>
-        <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
+        <activity android:name=".mvp.view.activity.MyHouseActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.PostHouseActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.CreditScoreActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.CouponActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.CollectionActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.WalletActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.CustomerServiceActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.LoginActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.SettingActivity">
+        </activity>
+        <activity android:name=".mvp.view.activity.FaceRegisterActivity">
+        </activity> <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
         <meta-data
                 android:name="com.joker.module_personal.app.GlobalConfiguration"
                 android:value="ConfigModule"/>
