--- a/module_personal/src/main/release/AndroidManifest.xml
+++ b/module_personal/src/main/release/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity android:name=".mvp.view.activity.CustomerServiceActivity">
         </activity>
-        <activity android:name=".mvp.view.activity.LoginActivity">
+        <activity android:name=".mvp.view.activity.LoginActivity"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".mvp.view.activity.SettingActivity">
         </activity>
