--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
     <application
             android:name="com.jess.arms.base.BaseApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/icon"
             android:label="@string/public_app_name"
             android:supportsRtl="true"
             android:theme="@style/public_AppTheme"
