--- a/module_personal/build.gradle
+++ b/module_personal/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     implementation('com.zzti.fengyongge:imagepicker:1.3.0'){
         exclude group: 'com.squareup.okhttp3'
     }
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.2@aar'
 }
