--- a/module_personal/build.gradle
+++ b/module_personal/build.gradle
@@ -15,4 +15,6 @@ dependencies {
         exclude group: 'com.squareup.okhttp3'
     }
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.2@aar'
+    //城市选择
+    implementation 'com.zaaach:citypicker:2.0.3'
 }
