--- a/module_home/build.gradle
+++ b/module_home/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 //    api project(":citypicker")
 
     //图片轮播
-    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.github.xiaohaibin:XBanner:1.6.5'
     //城市选择
     implementation 'com.zaaach:citypicker:2.0.3'
     // 筛选框
