--- a/module_order/src/main/release/AndroidManifest.xml
+++ b/module_order/src/main/release/AndroidManifest.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.joker.module_order">
+    package="com.joker.module_order">
 
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application>
-        <activity android:name=".mvp.view.activity.PublishCommentActivity">
-        </activity>
+        <activity android:name=".mvp.view.activity.OrderDetailActivity"></activity>
+        <activity android:name=".mvp.view.activity.PublishCommentActivity"></activity>
         <activity
-                android:name=".mvp.view.activity.MoreOperationActivity"
-                android:windowSoftInputMode="adjustPan">
-        </activity>
-        <activity android:name=".mvp.view.activity.FaceVerificationActivity">
-        </activity> <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
+            android:name=".mvp.view.activity.MoreOperationActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
         <meta-data
-                android:name="com.joker.module_order.app.GlobalConfiguration"
-                android:value="ConfigModule"/>
+            android:name="com.joker.module_order.app.GlobalConfiguration"
+            android:value="ConfigModule" />
     </application>
 
 </manifest>
