--- a/module_personal/build.gradle
+++ b/module_personal/build.gradle
@@ -11,9 +11,7 @@ dependencies {
     //报表
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     //图片选择器
-    implementation('com.zzti.fengyongge:imagepicker:1.3.0'){
-        exclude group: 'com.squareup.okhttp3'
-    }
+    implementation 'com.zzti.fengyongge:imagepicker:1.3.0'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.2@aar'
     //城市选择
     implementation 'com.zaaach:citypicker:2.0.3'
