--- a/module_order/src/main/release/AndroidManifest.xml
+++ b/module_order/src/main/release/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application>
+        <activity android:name=".mvp.view.activity.MoreControlActivity">
+        </activity>
         <activity android:name=".mvp.view.activity.GosChooseDeviceWorkWiFiActivity">
         </activity>
         <activity android:name=".mvp.view.activity.GosConfigCountdownActivity">
